fixing footer height on mobile

--- a/website/src/components/LandingPage/styles/footer.scss
+++ b/website/src/components/LandingPage/styles/footer.scss
@@ -39,7 +39,7 @@
 
 @media (max-width: 980px) {
     .footer-container{
-        margin-bottom: 375px;
+        margin-bottom: 4em;
 
     }
     
